[metadata]
name = neotest
author = NeoTest
author-email = neotest@neotest.io
summary = Test Automation Framework
description-file = README.md
description-content-type = text/markdown
url = https://neotest.io
project_urls = 
	Bug Tracker = https://github.com/neotest-io/neotest/issues
	Source Code = https://github.com/neotest-io/neotest
	Documentation = https://github.com/neotest-io/neotest

license = MIT
classifier =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Development Status :: 3 - Alpha
	Environment :: Console
	Natural Language :: English
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing

keywords = 
	neotest
	test
	automation

[files]
packages = neotest

[entry_points]
console_scripts =
	neotest = neotest.main:main
pbr.config.drivers =
	plain = pbr.cfg.driver:Plain

